# SAMD21_BARE_CMAKE

./: .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  debug_ozone.jdebug  main.cpp
board_sdk/: CMakeLists.txt
lib/: CMakeLists.txt
src/: main.c
